--- a/puma.html
+++ b/puma.html
@@ -14,7 +14,7 @@
   <p>Puma, león de montaña</p>
   
   <img src="Puma1.jpg" alt="puma1" height="200" width="300">
-  <img src="Puma2.png" alt="puma2" height="200" width="300">
+  <img src="Puma2.jpg" alt="puma2" height="200" width="300">
   
   <h2><strong>Estado de conservación</strong></h2>
   <p>Preocupación Menor</p>
